--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "socket.io": "^4.1.2"
+    "knex": "^0.95.6",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.1.2",
+    "sqlite3": "^5.0.2"
   },
   "engines": {
     "node": ">=14.0.0",
