--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "faker": "^5.5.3",
     "knex": "^0.95.6",
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
