--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "knex": "^0.95.6",
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.1",
     "socket.io": "^4.1.2",
     "sqlite3": "^5.0.2"
   },
