--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
@@ -19,6 +20,7 @@
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.1",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.1.2",
     "sqlite3": "^5.0.2"
   },
