--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "normalizr": "^3.6.1",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.1.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "bcrypt": "^5.0.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": ">=14.0.0",
