--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
@@ -20,12 +21,13 @@
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.1",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.1.2",
     "sqlite3": "^5.0.2",
-    "bcrypt": "^5.0.1",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "dotenv": "^10.0.0"
   },
   "engines": {
     "node": ">=14.0.0",
