--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/compression": "^1.7.1",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "faker": "^5.5.3",
     "knex": "^0.95.6",
+    "log4js": "^6.3.0",
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.1",
@@ -26,8 +30,7 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.1.2",
-    "sqlite3": "^5.0.2",
-    "dotenv": "^10.0.0"
+    "sqlite3": "^5.0.2"
   },
   "engines": {
     "node": ">=14.0.0",
