--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "log4js": "^6.3.0",
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^4.7.0",
     "normalizr": "^3.6.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.1.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "twilio": "^3.67.1"
   },
   "engines": {
     "node": ">=14.0.0",
