--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql": "^15.5.3",
     "knex": "^0.95.6",
     "log4js": "^6.3.0",
+    "mongodb": "^4.1.2",
     "mongoose": "^5.13.2",
     "mysql": "^2.18.1",
     "nodemailer": "^4.7.0",
