--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node benchmark.js",
+    
+    "test": "mocha ./test/apiRest.test.js",
     "start": "node server.js"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "@types/compression": "^1.7.1",
     "autocannon": "^7.4.0",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.4",
     "compression": "^1.7.4",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
@@ -36,10 +38,15 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.1.2",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6",
     "twilio": "^3.67.1"
   },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=6.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^9.1.1",
+    "request": "^2.88.2"
   }
 }
