--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     
-    "test": "mocha ./test/apiRest.test.js",
+    "test": "mocha ./test/mocha/producto.test.js",
     "start": "node server.js"
   },
   "author": "",
