desafio44_graphql_porEnv

--- a/development.env
+++ b/development.env
@@ -9,3 +9,4 @@ TWILIO_TOKEN = ""
 TWILIO_PHONE_NUMBER = [PHONE_NUMBER]
 TWILIO_PHONE_TO = [PHONE_NUMBER_DESTINO]
 NODE_ENV = 'development'
+GRAPHIQL = true
